# gifcurry

./: .gitignore  CHANGELOG.md  Gifcurry.cabal  Gifcurry.hs  LICENSE  README.md  cabal.config  makefile  stack.yaml
.github/workflows/: ci.yml
cli_src/: Main.hs
data/: gui.glade
docker/: Dockerfile
docs/: index.html  style.css
gui_src/: Main.hs
icon/: icon2.xcf
lib/: GiCairoCairoBridge.hs  GtkMainSyncAsync.hs
logo/: logo-0.kra
packaging/linux/: gifcurry-gui-install.sh  gifcurry.appdata.xml  gifcurry.desktop
packaging/linux/app-image/: com.lettier.gifcurry.appdata.xml  gifcurry-app-image-install.sh  gifcurry.appdata.xml
packaging/linux/arch-aur/: PKGBUILD
packaging/linux/common/: com.lettier.gifcurry.appdata.xml  com.lettier.gifcurry.desktop  gifcurry.desktop
packaging/linux/snap/: snapcraft.yaml
packaging/linux/snap/gui/: gifcurry.desktop
packaging/mac/: gifcurry-mac-install-script.command
src/cli/: Main.hs
src/data/: gui.glade  style-3-18.css  style-3-20.css  style.css
src/dev/: Paths_Gifcurry.hs
src/gui/: GuiCapabilities.hs  GuiKeyboard.hs  GuiMisc.hs  GuiPreview.hs  GuiRecords.hs  GuiStyle.hs  GuiTextOverlays.hs  Main.hs
src/lib/: Gifcurry.hs
