name:                 Gifcurry
version:              4.0.0.0
synopsis:             GIF creation utility.
description:          Your open source video to GIF maker.
homepage:             https://github.com/lettier/gifcurry
license:              BSD3
license-file:         LICENSE
author:               Lettier
maintainer:           Lettier
copyright:            (C) 2016 David Lettier
category:               Application
                      , Library
                      , Graphics
build-type:           Simple
extra-source-files:     ./README.md
                      , ./LICENSE
                      , ./CHANGELOG.md
                      , ./makefile
                      , ./lib/GtkMainSyncAsync.hs
                      , ./lib/GiCairoCairoBridge.hs
                      , ./lib/LICENSE
                      , ./src/dev/Paths_Gifcurry.hs
                      , ./src/data/style.css
                      , ./src/data/style-3-18.css
                      , ./src/data/style-3-20.css
                      , ./src/data/about-dialog-button-image.svg
                      , ./src/data/check-icon.svg
                      , ./src/data/crop-icon.svg
                      , ./src/data/down-icon.svg
                      , ./src/data/end-icon.svg
                      , ./src/data/error-icon.svg
                      , ./src/data/file-icon.svg
                      , ./src/data/gifcurry-logo.svg
                      , ./src/data/gifcurry-icon.svg
                      , ./src/data/info-icon.svg
                      , ./src/data/left-icon.svg
                      , ./src/data/minus-icon.svg
                      , ./src/data/open-icon.svg
                      , ./src/data/plus-icon.svg
                      , ./src/data/pause-icon.svg
                      , ./src/data/pen-icon.svg
                      , ./src/data/right-icon.svg
                      , ./src/data/save-as-gif-icon.svg
                      , ./src/data/save-as-video-icon.svg
                      , ./src/data/save-icon.svg
                      , ./src/data/spiral-icon.svg
                      , ./src/data/start-icon.svg
                      , ./src/data/text-icon.svg
                      , ./src/data/up-icon.svg
                      , ./src/data/upload-icon.svg
                      , ./src/data/warning-icon.svg
                      , ./src/data/width-icon.svg
                      , ./src/data/x-icon.svg
                      , ./src/data/pattern.svg
                      , ./src/data/gray-pattern.png
                      , ./src/data/purple-pattern.png
                      , ./src/data/green-pattern.png
                      , ./src/data/orange-pattern.png
data-files:             data/gui.glade
                      , data/style.css
                      , data/style-3-18.css
                      , data/style-3-20.css
                      , data/about-dialog-button-image.svg
                      , data/check-icon.svg
                      , data/crop-icon.svg
                      , data/down-icon.svg
                      , data/end-icon.svg
                      , data/error-icon.svg
                      , data/file-icon.svg
                      , data/gifcurry-logo.svg
                      , data/gifcurry-icon.svg
                      , data/info-icon.svg
                      , data/left-icon.svg
                      , data/minus-icon.svg
                      , data/open-icon.svg
                      , data/plus-icon.svg
                      , data/pause-icon.svg
                      , data/pen-icon.svg
                      , data/right-icon.svg
                      , data/save-as-gif-icon.svg
                      , data/save-as-video-icon.svg
                      , data/save-icon.svg
                      , data/spiral-icon.svg
                      , data/start-icon.svg
                      , data/text-icon.svg
                      , data/up-icon.svg
                      , data/upload-icon.svg
                      , data/warning-icon.svg
                      , data/width-icon.svg
                      , data/x-icon.svg
                      , data/gray-pattern.png
                      , data/purple-pattern.png
                      , data/green-pattern.png
                      , data/orange-pattern.png
data-dir:             ./src/
cabal-version:        >= 1.10

source-repository head
  type:     git
  location: https://github.com/lettier/gifcurry

library
  exposed-modules:      Gifcurry
  build-depends:        base >= 4.7 && < 5
                      , process >= 1.2 && <= 1.4.4
                      , temporary >= 1.2 && < 1.3
                      , directory == 1.3.*
                      , text == 1.2.*
                      , filepath == 1.4.*
                      , filemanip == 0.3.6.*
  hs-source-dirs:       ./src
                      , ./src/lib/
  ghc-options:        -Wall -freverse-errors
  default-language:   Haskell2010

executable            gifcurry_gui
  main-is:            Main.hs
  build-depends:        base == 4.9.*
                      , haskell-gi == 0.21.*
                      , haskell-gi-base == 0.21.*
                      , gi-gobject == 2.0.*
                      , gi-glib == 2.0.*
                      , gi-pango == 1.0.*
                      , gi-gdk == 3.0.*
                      , gi-gdkpixbuf == 2.0.16
                      , gi-gtk == 3.0.*
                      , gi-cairo == 1.0.*
                      , gi-gst == 1.0.*
                      , gi-gstvideo == 1.0.*
                      , cairo == 0.13.*
                      , pango == 0.13.*
                      , bytestring == 0.10.*
                      , process >= 1.2 && <= 1.4.4
                      , temporary >= 1.2 && < 1.3
                      , directory == 1.3.*
                      , text == 1.2.*
                      , filepath == 1.4.*
                      , filemanip == 0.3.6.*
                      , transformers == 0.5.*
  other-modules:        Paths_Gifcurry
                      , GuiRecords
                      , GuiCapabilities
                      , Gifcurry
                      , GuiStyle
                      , GuiTextOverlays
                      , GuiPreview
                      , GuiMisc

                      , GtkMainSyncAsync
                      , GiCairoCairoBridge
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall -freverse-errors
  hs-source-dirs:       ./lib/
                      , ./src/
                      , ./src/gui/
                      , ./src/lib/
  default-language:   Haskell2010

executable            gifcurry_cli
  main-is:            Main.hs
  build-depends:        base >= 4.7 && < 5
                      , process >= 1.2 && <= 1.4.4
                      , temporary >= 1.2 && < 1.3
                      , directory == 1.3.*
                      , cmdargs == 0.10.*
                      , text == 1.2.*
                      , filepath == 1.4.*
                      , filemanip == 0.3.6.*
                      , aeson == 1.1.2.*
                      , bytestring == 0.10.8.*
                      , yaml == 0.8.23.*
  other-modules:      Gifcurry
  ghc-options:        -Wall -freverse-errors
  hs-source-dirs:       ./src/
                      , ./src/cli/
                      , ./src/lib/
  default-language:   Haskell2010
